<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.azurespot.calculator.CalculatorMain"
    style="?android:attr/buttonBarButtonStyle">

    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="90dp">
	    <Button
	        android:id="@+id/button7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/seven" />
	
	    <Button
	        android:id="@+id/button8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/eight" />
	
	    <Button
	        android:id="@+id/button9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/nine" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="150dp">
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/four" />
	
	    <Button
	        android:id="@+id/button5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/five" />
	
	    <Button
	        android:id="@+id/button6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/six" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="210dp">
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/one" />
	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/two" />
	
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/three" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="270dp">
	    <Button
	        android:id="@+id/button0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/zero" />
 	
	    <Button
	        android:id="@+id/button_dot"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/dot" />

	    <Button
	        android:id="@+id/button_c"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:textSize="30sp"
	        android:background="#66c7e7"
	        android:text="@string/c" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="340dp"
	    android:gravity="center" >
	    
	    <Button
	        android:id="@+id/button_divide"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="8dp"
	        android:padding="0dp"
	        android:textSize="20sp"
	        android:textColor="#555555"
	        android:background="#d8f1f9"
	        android:text="@string/divide" />
	
	    <Button
	        android:id="@+id/button_multiply"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="8dp"
	        android:padding="0dp"
	        android:textSize="20sp"
	       	android:textColor="#555555"
	        android:background="#d8f1f9"
	        android:text="@string/multiply" />
	
	    <Button
	        android:id="@+id/button_add"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="8dp"
	        android:padding="0dp"
	        android:textSize="20sp"
	        android:textColor="#555555"
	        android:background="#d8f1f9"	        
	        android:text="@string/add" />
	    
	    <Button
	        android:id="@+id/button_subtract"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="8dp"
	        android:padding="0dp"
	        android:textSize="20sp"
	        android:textColor="#555555"
	        android:background="#d8f1f9"	        
	        android:text="@string/subtract" />
	    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="430dp">

	    <Button
	        android:id="@+id/button_equals"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:layout_marginTop="5dp"
	        android:background="#66c7e7"
	        android:text="@string/equals"
	        android:textSize="50sp" />

	 </LinearLayout>

    <EditText
        android:id="@+id/number_field"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:singleLine="true"
        android:hint="@string/enter"
        android:background="#d8f1f9"
        android:ems="10" />

</RelativeLayout>


